--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "$schema": "./package-schema.json",
-  "name": "env",
+  "name": "webpack5",
   "version": "1.0.0",
-  "description": "[Руководство по настройке Webpack](https://webpack.js.org/guides/) [Руководство по настройке GitHub Actions](https://docs.github.com/en/actions/quickstart)",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
@@ -38,16 +37,5 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "keywords": [
-    "template"
-  ],
-  "bugs": {
-    "url": ""
-  },
-  "homepage": ""
+  }
 }
