--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -50,5 +50,9 @@ jobs:
           path: 'dist'
 
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+        uses: JamesIves/github-pages-deploy-action@4.2.0
+        with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: dist
+          context: deployment
