--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack5",
+  "name": "env",
   "version": "1.0.0",
-  "description": "",
+  "description": "[Руководство по настройке Webpack](https://webpack.js.org/guides/) [Руководство по настройке GitHub Actions](https://docs.github.com/en/actions/quickstart)",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
@@ -37,5 +37,16 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nikan152435/Task-Continuous-Deployment-browser.git"
+  },
+  "keywords": [
+    "template"
+  ],
+  "bugs": {
+    "url": "https://github.com/Nikan152435/Task-Continuous-Deployment-browser/issues"
+  },
+  "homepage": "https://github.com/Nikan152435/Task-Continuous-Deployment-browser#readme"
 }
